@@ -8,8 +8,8 @@ Authors@R: c(
         person("Vladimir", "Kiselev", role=c("ctb"), email="vk6@sanger.ac.uk"),
         person("Felix G.M.", "Ernst", role=c("ctb"), email="felix.gm.ernst@outlook.com"),
         person("Alan", "O'Callaghan", role=c("ctb", "cre"), email="alan.ocallaghan@outlook.com"))
-Version: 1.21.2
-Date: 2021-05-25
+Version: 1.21.3
+Date: 2021-07-31
 License: GPL-3
 Title: Single-Cell Analysis Toolkit for Gene Expression Data in R
 Description: A collection of tools for doing various analyses of
@@ -39,7 +39,8 @@ Imports:
     ggbeeswarm,
     viridis,
     Rtsne,
-    RColorBrewer
+    RColorBrewer,
+    ggrepel
 Suggests: 
     BiocStyle,
     biomaRt,
